--- a/python3.ipynb
+++ b/python3.ipynb
@@ -834,18 +834,53 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The square footage of the house is 1200 square feet.\n"
+     ]
+    }
+   ],
    "source": [
-    "input: ([1, 6, 9, -3, 4 ,-78,0], -3, 4)\n",
-    "    \n",
-    "num1= -3\n",
-    "num2= 4\n",
-    "    \n",
-    "def consec( arr, num1, num2):\n",
-    "    pass\n",
-    "if {input[]}"
+    "def calculate_square_footage(length, width):\n",
+    "    area = length * width\n",
+    "    return area\n",
+    "\n",
+    "house_length = 40  \n",
+    "house_width = 30  \n",
+    "\n",
+    "square_footage = calculate_square_footage(house_length, house_width)\n",
+    "print(f\"The square footage of the house is {square_footage} square feet.\")\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "The circumference of the circle is approximately 31.41592653589793 units.\n"
+     ]
+    }
+   ],
+   "source": [
+    "import math\n",
+    "\n",
+    "def calculate_circumference(radius):\n",
+    "    circumference = 2 * math.pi * radius\n",
+    "    return circumference\n",
+    "\n",
+    "circle_radius = 5 \n",
+    "\n",
+    "circumference = calculate_circumference(circle_radius)\n",
+    "print(f\"The circumference of the circle is approximately {circumference} units.\")\n"
    ]
   },
   {
